# show-me-virginias-money

./: Cargo.toml  README.md
.github/workflows/: fetch_dogwoods.yml
.nova/: Configuration.json
reports/: broken.txt
reports/2012_04/: Report.csv  ScheduleA.csv  ScheduleD.csv  ScheduleH.csv
reports/2012_05/: Report.csv
reports/2012_06/: Report.csv  ScheduleA.csv  ScheduleB.csv  ScheduleD.csv  ScheduleE.csv
reports/2012_07/: Report.csv  ScheduleA.csv  ScheduleB.csv  ScheduleD.csv  ScheduleE.csv  ScheduleH.csv
reports/2012_08/: Report.csv  ScheduleA.csv
reports/2012_09/: Report.csv  ScheduleA.csv  ScheduleB.csv  ScheduleH.csv
reports/2012_10/: Report.csv  ScheduleA.csv  ScheduleB.csv  ScheduleD.csv  ScheduleG.csv  ScheduleH.csv
reports/2012_11/: Report.csv  ScheduleA.csv  ScheduleB.csv  ScheduleD.csv  ScheduleE.csv  ScheduleG.csv  ScheduleH.csv
reports/2012_12/: Report.csv  ScheduleA.csv  ScheduleB.csv  ScheduleD.csv  ScheduleE.csv  ScheduleH.csv
reports/2013_01/: Report.csv  ScheduleD.csv  ScheduleG.csv  ScheduleH.csv
reports/2013_02/: Report.csv  ScheduleA.csv
reports/2013_03/: Report.csv  ScheduleA.csv  ScheduleH.csv
reports/2013_04/: Report.csv  ScheduleD.csv  ScheduleE.csv  ScheduleG.csv  ScheduleH.csv
reports/2013_05/: Report.csv  ScheduleA.csv  ScheduleB.csv  ScheduleD.csv  ScheduleE.csv
reports/2013_06/: Report.csv  ScheduleA.csv  ScheduleB.csv  ScheduleD.csv  ScheduleE.csv
reports/2013_07/: Report.csv  ScheduleB.csv  ScheduleD.csv  ScheduleE.csv  ScheduleG.csv  ScheduleH.csv
reports/2013_08/: Report.csv  (+3 more)
src/: main.rs
(+1145 files in other folders)
